Relative font size values (em) within CSS animations compound https://bugs.webkit.org/show_bug.cgi?id=194749 <rdar://problem/48171898>

Reviewed by Antoine Quint.

Source/WebCore:

The em unit should be relative to the font size of the parent style when resolving 'font-size' property.
We weren't passing the parent style when resolving keyframes.

Test case by Scott Kellum.

Test: animations/keyframe-em-unit.html

* style/StyleResolver.cpp:
(WebCore::Style::Resolver::styleForKeyframe):
* style/StyleResolver.h:
(WebCore::Style::Resolver::overrideDocumentElementStyle const):
(WebCore::Style::Resolver::setOverrideDocumentElementStyle):
(WebCore::Style::Resolver::setParentElementStyleForKeyframes):

Add a way to pass the parent element style directly to the style resolver.
This should really be passed via the animation system like other context but that requires
lots of refactoring.

* style/StyleTreeResolver.cpp:
(WebCore::Style::TreeResolver::createAnimatedElementUpdate):

Pass it.

LayoutTests:

* animations/keyframe-em-unit-expected.html: Added.
* animations/keyframe-em-unit.html: Added.


Canonical link: https://commits.webkit.org/225900@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@262946 268f45cc-cd09-0410-ab3c-d52691b4dbfc